k8/k8s-hive-manifests/k8s-hive/base/ingress/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hive-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: hive.mycompany.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: hive-server
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hive-web
                port:
                  number: 3000
